# mcp-chart-image-scanner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  extract_docker_images.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py  smithery.yaml
.github/: release-drafter-config.yml
.github/workflows/: ci.yml  release-drafter.yml  version-bump.yml
.tasks/: plan.md
docs/: README.md  cli.md  cursor.md  developer-guide.md  docker.md  installation.md  mcp-server.md  quickstart.md  smithery.md  testing-guide.md  user-guide.md  versioning.md
docs/api/: README.md
docs/design/: pydantic-error-handling.md
docs/usage/: README.md  advanced.md
mcp_chart_scanner/: __init__.py  cli.py  extract.py  utils.py
mcp_chart_scanner/server/: README.md  __init__.py  mcp_server.py
src/mcp_chart_image_scanner/: __init__.py  health.py  main.py  mcp_server.py
tasks/: plan.md
tests/: __init__.py  conftest.py  test_chart_scanning.py  test_cli_main.py  test_compatibility.py  test_docker.py  test_error_handling.py  test_extract_chart.py  test_extract_images.py  test_helm_cli.py  test_main_function.py  test_mcp_server.py  test_server_basic.py  test_transport.py  test_usage.py
tests/test_data/charts/test-chart/: Chart.yaml
tests/test_data/charts/test-chart/templates/: test.yaml
